Basic homepage with filler text created

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="custom-cursor"> 
+<body>
     <!-- header design  -->
     <header class="header">
 
@@ -27,10 +27,28 @@
             <a href="#portfolio">Portfolio</a>
             <a href="#contact">Contact</a>
         </nav>
-
     </header>
-
     <!-- Homepage design -->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Tanvir Sublok</h3>
+            <h1>I'm an aspiring Software Developer</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam facere
+                esse, doloribus, tempore, odio dolores eos adipisci nam exercitationem ea modi nemo.
+                Accusantium veritatis quos qui dignissimos ex sunt quisquam.</p>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>   
+                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+            </div>
+            <a href="#" class="btn">View Resume</a>
+        </div>
+
+        <div class="home-img">
+            <img src="images/myself1.jpeg" alt="">
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
