--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- We start with an HTML document declaration, telling the browser this is an HTML file for English language. -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,19 +9,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanvir's Portfolio</title>
 
+    <!-- We import the Boxicons CSS library to use icons in our project. -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <!-- We link our custom CSS file "style.css" to style the webpage. -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <!-- header design  -->
+    <!-- The header section contains the logo, menu icon, and navigation links. -->
     <header class="header">
 
+        <!-- The "Portfolio" link that serves as our logo. -->
         <a href="#" class="logo">Portfolio</a>
 
+        <!-- The menu icon, represented by the "bx bx-menu" class from Boxicons library. -->
         <i class='bx bx-menu' id="menu-icon"></i>
 
+        <!-- The navigation bar (navbar) containing various links to different sections. -->
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
@@ -28,28 +35,37 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-    <!-- Homepage design -->
+
+    <!-- The homepage design section with class "home" and ID "home". -->
     <section class="home" id="home">
+
+        <!-- The home content with a greeting and introduction. -->
         <div class="home-content">
             <h3>Hello, It's Tanvir Sublok</h3>
             <h1>I'm an aspiring Software Developer</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam facere
                 esse, doloribus, tempore, odio dolores eos adipisci nam exercitationem ea modi nemo.
                 Accusantium veritatis quos qui dignissimos ex sunt quisquam.</p>
+            <!-- Social media icons for linking to profiles. -->
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>   
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-gmail'></i></a>
             </div>
+            <!-- A button to view the resume. -->
             <a href="#" class="btn">View Resume</a>
         </div>
 
+        <!-- An image of myself with class "home-img". -->
         <div class="home-img">
             <img src="images/myself1.jpeg" alt="">
         </div>
     </section>
 
+    <!-- We link our custom JavaScript file "script.js" for interactivity. -->
     <script src="js/script.js"></script>
 </body>
 
