--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- The home content with a greeting and introduction. -->
         <div class="home-content">
             <h3>Hello, It's Tanvir Sublok</h3>
-            <h1>I'm an aspiring Software Developer</h1>
+            <h1>I'm an aspiring <span>Software Developer</span></h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam facere
                 esse, doloribus, tempore, odio dolores eos adipisci nam exercitationem ea modi nemo.
                 Accusantium veritatis quos qui dignissimos ex sunt quisquam.</p>
